Dungeon: refactor LevelNode to use getFirst() (#1463)
`contrib/level/generator/graphBased/levelGraph/LevelNode.java`: use `getFirst()`  (available since Java 21) to retrieve first element of a list/set instead of `get(0)` to improve readability. 
no changes in API, just minor refactoring.